--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,10 +2,11 @@
   "extends": "next/core-web-vitals",
   "rules": {
     "react/no-unescaped-entities": "off",
+    "react/jsx-no-duplicate-props": "warn",
+    "@next/next/no-img-element": "off",
     "@typescript-eslint/no-unused-vars": "warn",
     "@typescript-eslint/no-explicit-any": "warn",
     "react-hooks/exhaustive-deps": "warn",
-    "@next/next/no-img-element": "warn",
     "@typescript-eslint/no-empty-object-type": "warn",
     "prefer-const": "warn"
   }
